@@ -62,6 +62,10 @@ Functions
    #-1 if an invalid flag/power is given. Suggested by AnneLions. [MG]
 
 Fixes:
+ * Using some substitutions on the connect/motd/etc attributes introduced
+   in p11 could cause a crash. Reported by Minion@M*U*S*H. [GM]
+ * Substitions on the connect/motd/etc attributes now work as expected
+   when a player is connected. Suggested by Minion@M*U*S*H. [GM]
  * English matching works better with possessive get
    (get box's 2nd thing). Reported by israphel.
  * Many more messages generated by the server have been 
